; ModuleID = '/home/carl/AnghaBench/libgit2/tests/commit/extr_signature.c_test_commit_signature__from_buf_with_neg_zero_offset.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/commit/extr_signature.c_test_commit_signature__from_buf_with_neg_zero_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, i32, i32 }
%struct.TYPE_5__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [42 x i8] c"Test User <test@test.tt> 1461698487 -0000\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"Test User\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"test@test.tt\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_commit_signature__from_buf_with_neg_zero_offset() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = call i32 @git_signature_from_buffer(%struct.TYPE_6__** %1, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @cl_git_pass(i32 %2)
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %6)
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i32 %10)
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @cl_assert_equal_i(i8 signext -73, i32 %15)
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @cl_assert_equal_i(i8 signext 0, i32 %20)
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @cl_assert_equal_i(i8 signext 45, i32 %25)
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %28 = call i32 @git_signature_free(%struct.TYPE_6__* %27)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_signature_from_buffer(%struct.TYPE_6__**, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i8 signext, i32) #1

declare dso_local i32 @git_signature_free(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
